--- a/caffeine.lpi
+++ b/caffeine.lpi
@@ -27,7 +27,7 @@
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="1"/>
       <RevisionNr Value="4"/>
-      <StringTable Comments="Based on Caffeine by Kyle Leong" FileDescription="Caffeine-Simplified" InternalName="Caffeine-Simplified" LegalCopyright="Clarence Ho" ProductName="Caffeine-Simplified"/>
+      <StringTable Comments="Based on Caffeine by Kyle Leong" FileDescription="Caffeine" InternalName="Caffeine-Simplified" LegalCopyright="Clarence Ho" ProductName="Caffeine"/>
     </VersionInfo>
     <BuildModes Count="3">
       <Item1 Name="Default" Default="True"/>
