--- a/caffeine.lpi
+++ b/caffeine.lpi
@@ -18,16 +18,17 @@
         <TextDesc Value="Prevent your computer from going to sleep."/>
       </XPManifest>
       <Icon Value="0"/>
-      <Resources Count="2">
-        <Resource_0 FileName="caffeine_enabled.ico" Type="ICON" ResourceName="CAFFEINE_ENABLED"/>
-        <Resource_1 FileName="caffeine_disabled.ico" Type="ICON" ResourceName="CAFFEINE_DISABLED"/>
+      <Resources Count="3">
+        <Resource_0 FileName="caffeine.ico" Type="ICON" ResourceName="CAFFEINE"/>
+        <Resource_1 FileName="caffeine_enabled.ico" Type="ICON" ResourceName="CAFFEINE_ENABLED"/>
+        <Resource_2 FileName="caffeine_disabled.ico" Type="ICON" ResourceName="CAFFEINE_DISABLED"/>
       </Resources>
     </General>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="1"/>
       <RevisionNr Value="4"/>
-      <StringTable Comments="Based on Caffeine by Kyle Leong" FileDescription="Caffeine" InternalName="Caffeine-Simplified" LegalCopyright="Clarence Ho" ProductName="Caffeine"/>
+      <StringTable Comments="Based on Caffeine by Kyle Leong" FileDescription="Caffeine-Simplified" InternalName="Caffeine-Simplified" LegalCopyright="Clarence Ho" ProductName="Caffeine-Simplified"/>
     </VersionInfo>
     <BuildModes Count="3">
       <Item1 Name="Default" Default="True"/>
