--- a/caffeine.lpi
+++ b/caffeine.lpi
@@ -18,11 +18,16 @@
         <TextDesc Value="Prevent your computer from going to sleep."/>
       </XPManifest>
       <Icon Value="0"/>
+      <Resources Count="3">
+        <Resource_0 FileName="caffeine.ico" Type="ICON" ResourceName="CAFFEINE"/>
+        <Resource_1 FileName="caffeine_enabled.ico" Type="ICON" ResourceName="CAFFEINE_ENABLED"/>
+        <Resource_2 FileName="caffeine_disabled.ico" Type="ICON" ResourceName="CAFFEINE_DISABLED"/>
+      </Resources>
     </General>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="1"/>
-      <RevisionNr Value="3"/>
+      <RevisionNr Value="4"/>
       <StringTable Comments="Based on Caffeine by Kyle Leong" FileDescription="Caffeine-Simplified" InternalName="Caffeine-Simplified" LegalCopyright="Clarence Ho" ProductName="Caffeine-Simplified"/>
     </VersionInfo>
     <BuildModes Count="3">
@@ -80,6 +85,8 @@
           </SearchPaths>
           <CodeGeneration>
             <SmartLinkUnit Value="True"/>
+            <TargetCPU Value="i386"/>
+            <TargetOS Value="win32"/>
             <Optimizations>
               <OptimizationLevel Value="3"/>
             </Optimizations>
